--- a/src/about-us.html
+++ b/src/about-us.html
@@ -683,7 +683,7 @@
                 <div class=" fw-medium">Logo</div>
             </div>
 
-            <div class="mt-5 text-center">
+            <div class="mt-5 text-center px-2">
                 <span class="fw-medium  fs-3">Subscribe to our newsletter to get news first</span>
             </div>
 
@@ -695,10 +695,10 @@
                 </div>
             </div>
 
-            <div class="mt-5 w-75 bg-white input-group px-3 rounded-1 m-auto">
+            <div class="mt-5 w-90 w-xl-75 bg-white input-group px-3 rounded-1 m-auto">
                 <input type="text" class="form-control p-4 border-0" placeholder="Email address">
                 <div class="input-group-append d-flex flex-column justify-content-center align-items-center">
-                    <button class="fw-bold bg-green-700 px-5 py-3 text-white rounded-1">
+                    <button class="fw-bold bg-green-700 px-2 px-xl-5  py-3 text-white rounded-1">
                         <span>SUBSCRIBE</span>
                         <span class="ps-1"><i class="bi bi-arrow-right"></i></span>
                     </button>
