--- a/src/account/card-address.html
+++ b/src/account/card-address.html
@@ -463,7 +463,7 @@
     </div>
 
     <div class="container my-5" x-data="{ openModal: false }">
-        <div class="d-flex gap-5 flex-wrap justify-content-center row-gap-5">
+        <div class="d-flex gap-5 flex-wrap flex-xl-nowrap justify-content-center row-gap-5">
             <div class="w-100 w-xl-260">
                 <div class="class shadow-sm py-2 border rounded">
                     <a href="dashboard.html" class="d-block py-3 ps-4 account-navbar">
