--- a/src/account/setting.html
+++ b/src/account/setting.html
@@ -462,7 +462,7 @@
         </div>
     </div>
 
-    <div class="container mt-5 mb-5 d-flex justify-content-center justify-content-xl-between flex-wrap row-gap-5">
+    <div class="container mt-5 mb-5 d-flex justify-content-center justify-content-xl-between flex-wrap flex-xl-nowrap row-gap-5">
         <div class="w-100 w-xl-260">
             <div class="class shadow-sm py-2 border rounded">
                 <a href="dashboard.html" class="d-block py-3 ps-4 account-navbar">
