--- a/src/index.html
+++ b/src/index.html
@@ -800,7 +800,7 @@
                 </div>
 
                 <div class="d-flex flex-column flex-wrap">
-                    <div class="d-flex flex-wrap justify-content-center justify-content-xl-start">
+                    <div class="d-flex flex-wrap flex-xl-nowrap justify-content-center justify-content-xl-start">
                         <div class="w-236 border p-1 pb-2 position-relative">
                             <div class="position-absolute top-0 mt-2 p-lg-2">
                                 <div class="fs-7 text-white px-2 py-2 bg-green-700 text-center rounded-1">
@@ -1298,7 +1298,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex flex-wrap justify-content-center justify-content-xl-start gap-2 mt-4">
+                    <div class="d-flex flex-wrap flex-xl-nowrap justify-content-center justify-content-xl-start gap-2 mt-4">
                         <div class="products-items w-236 border p-1 rounded-1 position-relative">
                             <div class="position-absolute top-0 p-1 mt-2">
                                 <div class="fs-7 text-white px-1 py-2 px-3 bg-warning-900 text-center rounded-1">
