--- a/src/account/dashboard.html
+++ b/src/account/dashboard.html
@@ -801,7 +801,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr>
+                            <tr class="text-nowrap">
                                 <td class="border-0 ps-3 pt-4">
                                     <div class="fw-medium">#96459761</div>
                                 </td>
@@ -822,7 +822,7 @@
                                 </td>
                             </tr>
 
-                            <tr>
+                            <tr class="text-nowrap">
                                 <td class="border-0 ps-3 pt-4">
                                     <div class="fw-medium">#71667167</div>
                                 </td>
@@ -843,7 +843,7 @@
                                 </td>
                             </tr>
 
-                            <tr>
+                            <tr class="text-nowrap">
                                 <td class="border-0 ps-3 pt-4">
                                     <div class="fw-medium">#95214362</div>
                                 </td>
